@@ -1,5 +1,6 @@
 == 3.5 ==
 
+* Fixed database table verification and repairment processes
 * Fixed rule counts settings issue
 * Fixed [renewform] shortcode styling issue
 * Fixed protection issue, when protection is disabled
